--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_PORT=3000
-APP_DOMAIN=Alanas-MacBook-Pro.local
+APP_DOMAIN=api.srg.com 
 
 JWT_KEY=GqqRpRmu9_yxo_sEIxVNYLedFXLw3zf_G_zbMIl9VMc1234
 
