changed database to D.O. Cluster

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 APP_ENV=local
-APP_PORT=3000
+APP_PORT=3001
 APP_DOMAIN=api.sinclairgroup.org
 
 JWT_KEY=GqqRpRmu9_yxo_sEIxVNYLedFXLw3zf_G_zbMIl9VMc1234
 
-DB_HOST=localhost
-DB_PORT=3306
+DB_HOST=srg-database-mysql-do-user-14371739-0.b.db.ondigitalocean.com
+DB_PORT=25060
 DB_USER=areyna
-DB_PASS=4Alanarox!
+DB_PASS=AVNS_ACW8YxBDBzPrTOdT03T
 DB_DATABASE=srg
