--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "koa-router": "^12.0.0",
     "koajs": "^1.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.5.2",
     "nodemon": "^2.0.22"
   }
 }
