--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "koajs": "^1.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "xlsx": "^0.18.5"
   }
 }
