--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_PORT=3001
-APP_DOMAIN=api.sinclairgroup.org
+APP_DOMAIN=localhost
 
 JWT_KEY=GqqRpRmu9_yxo_sEIxVNYLedFXLw3zf_G_zbMIl9VMc1234
 
@@ -9,3 +9,14 @@ DB_PORT=25060
 DB_USER=areyna
 DB_PASS=AVNS_ACW8YxBDBzPrTOdT03T
 DB_DATABASE=srg
+# APP_ENV=local
+# APP_PORT=3001
+# APP_DOMAIN=localhost
+
+# JWT_KEY=GqqRpRmu9_yxo_sEIxVNYLedFXLw3zf_G_zbMIl9VMc1234
+
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_USER=areyna
+# DB_PASS=4Alanarox!
+# DB_DATABASE=srg
