updated env and parseSurvey
Fixed weight scale and teacher group error. Edited the env file to reach api

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_PORT=3001
-APP_DOMAIN=localhost
+APP_DOMAIN=api.sinclairgroup.org
 
 JWT_KEY=GqqRpRmu9_yxo_sEIxVNYLedFXLw3zf_G_zbMIl9VMc1234
 
